[IV] QPT-176 completed hotel reservation
